# projectm

./: CMakeLists.txt
configs/: mageAnimationConfig.json  test.json
include/: AssetManager.hpp  ConfigManager.hpp  Game.hpp  LogConsole.hpp  Logger.hpp  Renderer.hpp
include/Character/: Character.hpp  Item.hpp
include/Window/: EventHandler.hpp  InputHandler.hpp  Window.hpp
src/: AssetManager.cpp  Character.cpp  ConfigManager.cpp  EventHandler.cpp  Game.cpp  InputHandler.cpp  Item.cpp  LogConsole.cpp  Logger.cpp  Renderer.cpp  Window.cpp  main.cpp
